kubernetes-yaml/argument.yml
apiVersion: v1
kind: Pod
metadata:
  name: arg1
  labels:
    mycka: simplilearn
spec:
  containers:
  - name: mycontainer
    image: docker.io/ubuntu
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo hello; sleep 10;done"]
