kubernetes-yaml/cmap3.yml
kind: Pod 
apiVersion: v1 
metadata:
  name: pod-env12
spec:
  containers:
    - name: env-var-configmap
      image: nginx:1.7.9
