kubernetes-yaml/command.yml
apiVersion: v1
kind: Pod
metadata:
    name: command-demo2
    labels: 
        app: dev
spec:
    containers:
    - name: command-demo-container
      image: busybox
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo hello; sleep 10;done"]
