kubernetes-yaml/command2.yml
apiVersion: v1
kind: Pod
metadata:
    name: command-demo3
    labels: 
        app: bookstore
spec:
    containers:
    - name: command-demo-container
      image: busybox
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo hello; sleep 10;done"]
