kubernetes-yaml/host2.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-mysql
spec:
  containers:
  - image: docker.io/mysql:5.6
    name: test-container
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: test-volume
  volumes:
  - name: test-volume
    hostPath:
      # directory location on host
      path: /mymysql
      # this field is optional
      type: Directory
