kubernetes-yaml/nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    mycka: simplilearn-nginx
spec:
  containers:
  - name: nginx
    image: docker.io/nginx
    ports:
    - containerPort: 8082
