kubernetes-yaml/node.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: httpd
    imagePullPolicy: IfNotPresent
  nodeSelector:
    hdd: ssd
