kubernetes-yaml/pacman.yml
apiVersion: v1
kind: Pod
metadata:
  name: pacman
  labels:
     class: pg
spec:
  containers:
  - name: mycontainer
    image: docker.io/uzyexe/pacman
    ports:
    - containerPort: 80
