kubernetes-yaml/pod-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: hostname-command
  labels:
    mycka: simplilearn
spec:
  containers:
  - name: mycontainer
    image: docker.io/ubuntu
    command: ["hostname"]
