kubernetes-yaml/mario-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mymario
spec:
  selector:
     test: mario
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8080
