kubernetes-yaml/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    app: mydep1 
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 80
