kubernetes-yaml/svc1.yml
apiVersion: v1
kind: Service
metadata:
  name: myman
spec:
  selector:
    class: pg
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 80
